feat - client panel, dashboard, task, and profile(paritally) done

--- a/resources/sass/admin/app.scss
+++ b/resources/sass/admin/app.scss
@@ -86,7 +86,7 @@ p.task-description.expanded {
     width: 50%;
     font-size: 40px !important;
     font-weight: 600;
-    color: #ffffff;
+    // color: #ffffff;
     text-align: right;
 }
 
